--- a/frontend/src/components/Notifications/Notifications.css
+++ b/frontend/src/components/Notifications/Notifications.css
@@ -26,3 +26,13 @@
 .custom-toast-success .Toastify__progress-bar {
   background: #D9AB4D !important;
 }
+
+.custom-toast-warning .Toastify__progress-bar {
+  background: #D9AB4D !important;
+}
+
+.custom-toast-warning {
+  padding: 0;
+  margin: 0;
+  border: none !important;
+}
